--- a/Camello/src/main/resources/application.properties
+++ b/Camello/src/main/resources/application.properties
@@ -1,20 +1,27 @@
 spring.application.name=Camello
 # Server Configuration
-server.port=8080
+server.port=8081
 server.servlet.context-path=/api
 
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/camello_db
-spring.datasource.username=camello_user
-spring.datasource.password=camello_password
+# Neon Database Configuration
+spring.datasource.url=jdbc:postgresql://ep-wispy-wave-ae2ownve-pooler.c-2.us-east-2.aws.neon.tech/camello_colombia?sslmode=require&channel_binding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_3UFXPlNram0u
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=validate
+# JPA Configuration for Neon
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Connection Pool Configuration for Neon
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.connection-test-query=SELECT 1
 
 # JWT Configuration
 app.jwt.secret=camelloSecretKeyForJWTTokenGenerationAndValidation2024
@@ -52,6 +59,9 @@ app.cors.allow-credentials=true
 
 # Cache Configuration
 spring.cache.type=simple
+
+# Allow circular references (temporary for development)
+spring.main.allow-circular-references=true
 
 # Logging Configuration
 logging.level.com.camello=DEBUG
