--- a/Camello/src/main/resources/application.properties
+++ b/Camello/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Camello
 # Server Configuration
 server.port=8081
-server.servlet.context-path=/api
+# server.servlet.context-path=/api
 
 # Neon Database Configuration
 spring.datasource.url=jdbc:postgresql://ep-wispy-wave-ae2ownve-pooler.c-2.us-east-2.aws.neon.tech/camello_colombia?sslmode=require&channel_binding=require
@@ -10,7 +10,7 @@ spring.datasource.password=npg_3UFXPlNram0u
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration for Neon
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
